# fselogs

./: setup.cfg
fselogs/: __init__.py
side_effect/: __init__.py  decorators.py
