[metadata]
name = fselogs-AloizioMacedo
version = 0.1.0
author = Aloizio Macedo
author_email = aloiziomacedo@gmail.com
description = Python package that prints functions side effects 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AloizioMacedo/fselogs
project_urls =
    Bug Tracker = https://github.com/AloizioMacedo/fselogs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = fselogs
packages = find:
python_requires = >=3.6

[options.packages.find]
where = fselogs